JSW Devsb/src/objects/Order_Booking_Line__c.object
<CustomObject>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creation_Time__c</fullName>
        <formula>LEFT(RIGHT(text( CreatedDate),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creation Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_Code1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Code</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order request Line Items</relationshipLabel>
        <relationshipName>Order_request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_CodeName__c</fullName>
        <formula>Material_Code1__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Code</label>
        <referenceTo>Material_Source__c</referenceTo>
        <relationshipLabel>Order request Line Items</relationshipLabel>
        <relationshipName>Order_request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Request_Line__c</fullName>
        <label>Order Request Line</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Request_Name__c</fullName>
        <formula>Order_Request__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Request Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Request</label>
        <referenceTo>Order_Request__c</referenceTo>
        <relationshipName>Order_Booking_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packing_Type__c</fullName>
        <label>Packing Type</label>
        <picklist>
            <picklistValues>
                <fullName>HDPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1S LPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2S LPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOOSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plant_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Master</label>
        <referenceTo>Plant_Master__c</referenceTo>
        <relationshipLabel>Order request Line Items</relationshipLabel>
        <relationshipName>Order_request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant / Depot</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_Code__c</fullName>
        <label>SFDC Product Code</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLINKER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <label>SO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>So_Item_Number__c</fullName>
        <label>So Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rowNO__c</fullName>
        <label>rowNO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order request Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORL{000000000}</displayFormat>
        <label>Order Booking Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order request Line Items</pluralLabel>
    <recordTypes>
        <fullName>Order_Line_Record_Lock</fullName>
        <active>true</active>
        <label>Order Line Record Lock</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Price_Validation_for_nono_trade_customer</fullName>
        <active>false</active>
        <errorConditionFormula>Order_Request__r.Distribution_Channel__c =&apos;20&apos; &amp;&amp;  ISBLANK( Price__c )</errorConditionFormula>
        <errorMessage>Please Enter Price</errorMessage>
    </validationRules>
</CustomObject>